--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Langar&family=Roboto:ital,wght@1,100&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
